Add new text for python and node js page including change css style

--- a/public/css/i2.css
+++ b/public/css/i2.css
@@ -96,6 +96,7 @@ ul, li {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
 }
 .main__weather {
   margin-top: 10rem;
