--- a/src/template/views/python.hbs
+++ b/src/template/views/python.hbs
@@ -20,7 +20,7 @@
         </div>
         <br>
         <p>
-            Python is most popular language on the world
+            Python is most popular language on the world and i love it <3
         </p>
     </div>
     {{>footer}}
