--- a/src/template/views/node.hbs
+++ b/src/template/views/node.hbs
@@ -18,6 +18,7 @@
         <div class="main__img">
             <img src="https://cdn.webrazzi.com/uploads/2014/02/nodejs-logo_hd.png" alt="" class="main__im">
         </div>
+        I am learning Node js for back-end, hope it will okay
     </div>
     {{footer}}
 </body>
